# cmake-init-shared-static

./: .CMakeUserPresets.json  .clang-tidy  .gitignore  CMakeDarwinPresets.json  CMakeGenericPresets.json  CMakeLinuxPresets.json  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  CMakeWindowsPresets.json  GNUmakefile  requirements.txt
.github/workflows/: ci.yml
cmake/: dev-mode.cmake  install-rules.cmake
include/shared/: shared.hpp
source/: shared.cpp
test/: CMakeLists.txt
